unpackaged/main/default/objects/Marketing_Project_Expense__c/Marketing_Project_Expense__c.object-meta.xml
<CustomObject>
    <label>Marketing Project Expense</label>
    <nameField>
        <displayFormat>ME-{000000}</displayFormat>
        <label>Marketing Project Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Project Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>