unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/Campaign_Parent__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Parent</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Project Expenses (Campaign Parent)</relationshipLabel>
    <relationshipName>Marketing_Project_Expenses2</relationshipName>
    <type>Lookup</type>
</CustomField>