unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Campaign.RecordType.Name</field>
            <operation>equals</operation>
            <value>Core Service Record</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Project Expenses</relationshipLabel>
    <relationshipName>Marketing_Project_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>