unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/Expense_Source__c.field-meta.xml
<CustomField>
    <fullName>Expense_Source__c</fullName>
    <label>Expense Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Client Advisory Board</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
            <value>
                <fullName>Client Surveys</fullName>
            </value>
            <value>
                <fullName>Corporate events</fullName>
            </value>
            <value>
                <fullName>Events &amp; Tradeshows</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Image Purchase</fullName>
            </value>
            <value>
                <fullName>Marketing Tools</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Site Hosting</fullName>
            </value>
            <value>
                <fullName>Tchotchkes</fullName>
            </value>
            <value>
                <fullName>Team building</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Website Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>