unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Project Expenses (Marketing Campaign)</relationshipLabel>
    <relationshipName>Marketing_Project_Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>