unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/Marketing_Project__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Project__c</fullName>
    <label>Marketing Project</label>
    <referenceTo>Marketing_Project__c</referenceTo>
    <relationshipLabel>Marketing Project Expenses</relationshipLabel>
    <relationshipName>Marketing_Project_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>