unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/Marketing_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tactic__c</fullName>
    <label>Marketing Tactic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>