unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/MarketingExpenseID_18__c.field-meta.xml
<CustomField>
    <fullName>MarketingExpenseID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarketingExpenseID (18)</label>
    <type>Text</type>
</CustomField>