unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accounting manually checks this field to indicate a payable invoice has been created</description>
    <inlineHelpText>If checked the expense has been processed</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>