unpackaged/main/default/objects/Marketing_Project_Expense__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Vendor account by record type ID 012550000008vQq / NCM Vendor</description>
    <label>Vendor Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Project Expenses</relationshipLabel>
    <relationshipName>Marketing_Project_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>