unpackaged/main/default/objects/Marketing_Project_Expense__c/recordTypes/Internal_Expense.recordType-meta.xml
<RecordType>
    <fullName>Internal_Expense</fullName>
    <active>true</active>
    <description>Expense against internal, business overhead (systems, supplies, et al)</description>
    <label>Internal Expense</label>
</RecordType>