unpackaged/main/default/objects/Marketing_Project_Expense__c/recordTypes/Operational_Expense.recordType-meta.xml
<RecordType>
    <fullName>Operational_Expense</fullName>
    <active>true</active>
    <description>Used for operational expenses not directly tied to a marketing tactic</description>
    <label>Operational Expense</label>
</RecordType>