unpackaged/main/default/objects/Marketing_Project_Expense__c/recordTypes/Vendor_Expense.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Expense</fullName>
    <active>true</active>
    <description>Expense against vendors</description>
    <label>Vendor Expense</label>
</RecordType>