unpackaged/main/default/objects/Marketing_Project_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Expense_Date__c</columns>
    <columns>NAME</columns>
    <columns>Marketing_Tactic__c</columns>
    <columns>Marketing_Project__c</columns>
    <columns>Vendor_Account__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Processed__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2030</value>
    </filters>
    <label>All</label>
</ListView>